--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -181,7 +181,7 @@
 - title: 'Personality Modeling from Image Aesthetic Attribute-Aware Graph Representation Learning'
   #date:  'Jul. 2020'
   imgurl: '/images/projects/2022/zhu2022personality.png'
-  selected: false
+  selected: true
   authors:
     - name: Hancheng Zhu
       url:  'https://zhuhancheng.github.io/'    
