--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -204,7 +204,42 @@
     #  url:  'https://github.com/junshutang/EGGAN'
     - name: 'site'
       url:  'https://www.sciencedirect.com/science/article/pii/S104732032200195X'  
-    
+
+- title: 'Semi-Supervised Transformable Architecture Search for Feature Distillation'
+  #date:  'Jul. 2020'
+  imgurl: '/images/projects/2022/zhang2022semi.png'
+  selected: true
+  authors:
+    - name: Man Zhang
+      url:  false
+    - name: Yong Zhou
+      url:  false
+    - name: Bing Liu
+      url:  false
+    - name: Jiaqi Zhao
+      url:  false
+    - name: Rui Yao
+      url:  'https://ruiyao.bitbucket.io/'
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'  
+    - name: Hancheng Zhu
+      url:  'https://zhuhancheng.github.io/'    
+    - name: Hao Chen
+      url:  false
+  publisher:  'Pattern Analysis and Applications, 2022'
+  status:   '(SCI Q4)'
+  #place:   'in London, United Kingdom'
+  desc: 'We explained how to use only a few of labels, design a more flexible network architecture and combine feature distillation method to improve model efficiency while ensuring high accuracy. Specifically, we integrate different network structures into independent individuals to make the use of network structures more flexible. Based on knowledge distillation, we extract the channel features and establish a feature distillation connection from the teacher network to the student network.'
+  tags:
+    #- name: 'arXiv'
+    #  url:  'https://arxiv.org/abs/2004.09769'
+    #- name: 'pdf'
+    #  url:  'https://www.mdpi.com/2079-9292/11/19/3047/pdf'
+    #- name: 'code'
+    #  url:  'https://github.com/junshutang/EGGAN'
+    - name: 'site'
+      url:  'https://link.springer.com/article/10.1007/s10044-022-01122-y'  
+      
 - title: 'Incremental Learning with Neural Networks for Computer Vision: a Survey'
   #date:  'Jul. 2018'
   imgurl: '/images/projects/2022/liu2022incremental.jpg'
