--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>2022:</strong> <strong>Participation in Computer Graphics International (CGI) 2022 Supported by K.C.Wong Education Foundation</strong>, <i>Principal Investigator</i>"
+- normal:
     content:  "<strong>2022:</strong> <strong>Patent License Project for Facial Action Unit Recognition Method and Device Based on Joint Learning and Optical Flow Estimation</strong>, <i>Principal Investigator</i>"
 - normal:
     content:  "<strong>2022:</strong> <strong>Talent Program for Deputy General Manager of Science and Technology of Jiangsu Province</strong>, <i>Principal Investigator</i>"
