--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -1,3 +1,7 @@
+- date:  "Dec. 2022 -"
+  title: "Postdoctoral Fellow @ SJTU"
+  desc:  "Fine-Grained Visual Affective Analysis"
+  brief: true
 - date:  "Aug. 2020 -"
   title: "Tenure-Track Associate Professor @ CUMT"
   desc:  "Computer Vision, Deep Learning"
