--- a/_data/patents.yml
+++ b/_data/patents.yml
@@ -1,8 +1,6 @@
 - normal:
-    content:  "<strong>2022:</strong> <strong>Participation in Computer Graphics International (CGI) 2022 Supported by K.C.Wong Education Foundation</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2022:</strong> <strong>A Method and Device of User Personality Characteristic Prediction Based on Multi-Modal Information Fusion</strong>, <i>The Third Inventor</i>"
 - normal:
-    content:  "<strong>2022:</strong> <strong>Patent License Project for Facial Action Unit Recognition Method and Device Based on Joint Learning and Optical Flow Estimation</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2021:</strong> <strong>A Method and Device of Facial Action Unit Recognition Based on Joint Learning and Optical Flow Estimation</strong>, <i>The First Inventor</i>"
 - normal:
-    content:  "<strong>2022:</strong> <strong>Talent Program for Deputy General Manager of Science and Technology of Jiangsu Province</strong>, <i>Principal Investigator</i>"
-- normal:
-    content:  "<strong>2021:</strong> <strong>Young Scientists Fund of the National Natural Science Foundation of China</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2018:</strong> <strong>Identity Verification System V1.0 Based on Face Recognition</strong>, <i>The Second Inventor</i>"
