--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,8 +1,10 @@
 - normal:
-    content:  "<strong>2022:</strong> <strong>Participation in Computer Graphics International (CGI) 2022 Supported by K.C.Wong Education Foundation</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2022:</strong> <strong>Honorable Mention for Teaching Competition at the School of Computer Science and Technology, China University of Mining and Technology</strong>, <i>11/18</i>"
 - normal:
-    content:  "<strong>2022:</strong> <strong>Patent License Project for Facial Action Unit Recognition Method and Device Based on Joint Learning and Optical Flow Estimation</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2020:</strong> <strong>Special Prize for Scientific and Technological Progress of Shanghai Municipality</strong>, <i>11/18</i>"
 - normal:
-    content:  "<strong>2022:</strong> <strong>Talent Program for Deputy General Manager of Science and Technology of Jiangsu Province</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2020:</strong> <strong>One of the Top 10 Scientific Advances in the Shanghai Jiao Tong University</strong>, <i>8/9</i>"
 - normal:
-    content:  "<strong>2021:</strong> <strong>Young Scientists Fund of the National Natural Science Foundation of China</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2019:</strong> <strong>Super AI Leader (SAIL) TOP 30 project at World Artificial Intelligence Conference</strong>, <i>6/13</i>"
+- normal:
+    content:  "<strong>2015:</strong> <strong>Outstanding Graduate of the Northwestern Polytechnical University</strong>"
