--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>2022:</strong> <strong>Honorable Mention for Teaching Competition at the School of Computer Science and Technology, China University of Mining and Technology</strong>, <i>11/18</i>"
+    content:  "<strong>2022:</strong> <strong>Honorable Mention for Teaching Competition at the School of Computer Science and Technology, China University of Mining and Technology</strong>"
 - normal:
     content:  "<strong>2020:</strong> <strong>Special Prize for Scientific and Technological Progress of Shanghai Municipality</strong>, <i>11/18</i>"
 - normal:
