--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,6 +1,8 @@
 - normal:
     content:  "<strong>2022:</strong> <strong>Honorable Mention for Teaching Competition at the School of Computer Science and Technology, China University of Mining and Technology</strong>"
 - normal:
+    content:  "<strong>2021:</strong> <strong>Excellent Headteacher of the China University of Mining and Technology</strong>"
+- normal:
     content:  "<strong>2020:</strong> <strong>Special Prize for Scientific and Technological Progress of Shanghai Municipality</strong>, <i>11/18</i>"
 - normal:
     content:  "<strong>2020:</strong> <strong>One of the Top 10 Scientific Advances in the Shanghai Jiao Tong University</strong>, <i>8/9</i>"
