--- a/_data/patents.yml
+++ b/_data/patents.yml
@@ -3,4 +3,4 @@
 - normal:
     content:  "<strong>2021:</strong> <strong>A Method and Device of Facial Action Unit Recognition Based on Joint Learning and Optical Flow Estimation</strong>, <i>The First Inventor</i>"
 - normal:
-    content:  "<strong>2018:</strong> <strong>Identity Verification System V1.0 Based on Face Recognition</strong>, <i>The Second Inventor</i>"
+    content:  "<strong>2018:</strong> <strong>Identity Verification System V1.0 Based on Face Recognition</strong>, <i>Software Copyrights, The Second Inventor</i>"
