--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -10,3 +10,5 @@
     content:  "<strong>2019:</strong> <strong>Super AI Leader (SAIL) TOP 30 project at World Artificial Intelligence Conference</strong>, <i>6/13</i>"
 - normal:
     content:  "<strong>2015:</strong> <strong>Outstanding Graduate of the Northwestern Polytechnical University</strong>"
+- normal:
+    content:  "<strong>2012-2015:</strong> <strong>Outstanding Student of the Northwestern Polytechnical University</strong>"    
