--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -9,6 +9,10 @@
 - normal:
     content:  "<strong>2019:</strong> <strong>Super AI Leader (SAIL) TOP 30 project at World Artificial Intelligence Conference</strong>, <i>6/13</i>"
 - normal:
+    content:  "<strong>2016-2019:</strong> <strong>KoGuan Endeavor Scholarship, Suzhou Yucai Scholarship</strong>"    
+- normal:
     content:  "<strong>2015:</strong> <strong>Outstanding Graduate of the Northwestern Polytechnical University</strong>"
 - normal:
     content:  "<strong>2012-2015:</strong> <strong>Outstanding Student of the Northwestern Polytechnical University</strong>"    
+- normal:
+    content:  "<strong>2012-2015:</strong> <strong>National Endeavor Scholarship, Samsung China Scholarship, Wu Yajun Scholarship</strong>"
