--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,7 +1,7 @@
 - normal:
-    content:  "<strong>2022:</strong> <strong>Honorable Mention for Teaching Competition at the School of Computer Science and Technology, China University of Mining and Technology</strong>"
+    content:  "<strong>Program Committee Member/Conference Reviewer:</strong> <strong>CVPR, ACM MM, IJCAI, AAAI, CGI, ICONIP, ICIG, NCIIP</strong>"
 - normal:
-    content:  "<strong>2021:</strong> <strong>Excellent Headteacher of the China University of Mining and Technology</strong>"
+    content:  "<strong>Journal Reviewer:</strong> <strong>IEEE TPAMI, IJCV, IEEE TIP, IEEE TAFFC, IEEE TMM, Signal Processing, SPIC, IET IP, TVC, Computers & Graphics, Journal of Electronic Imaging, Frontiers in Computer Science</strong>"
 - normal:
     content:  "<strong>2020:</strong> <strong>Special Prize for Scientific and Technological Progress of Shanghai Municipality</strong>, <i>11/18</i>"
 - normal:
