--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,18 +1,10 @@
 - normal:
+    content:  "<strong>Member in Chinese Association for Artificial Intelligence (CAAI):</strong> <strong>Professional Committee of Pattern Recognition, Professional Committee of Knowledge Engineering and Distributed Intelligence, Professional Committee of Machine Learning</strong>"
+- normal:
+    content:  "<strong>Member in China Society of Image and Graphics (CSIG):</strong> <strong>Professional Committee of Machine Vision, Professional Committee of Animation and Digital Entertainment</strong>"
+- normal:
+    content:  "<strong>Session Chair:</strong> <strong>Computer Graphics International (CGI) 2022, Shanghai Cross-Media Intelligence and Computer Vision Forum 2019</strong>, <i>11/18</i>"
+- normal:
     content:  "<strong>Program Committee Member/Conference Reviewer:</strong> <strong>CVPR, ACM MM, IJCAI, AAAI, CGI, ICONIP, ICIG, NCIIP</strong>"
 - normal:
-    content:  "<strong>Journal Reviewer:</strong> <strong>IEEE TPAMI, IJCV, IEEE TIP, IEEE TAFFC, IEEE TMM, Signal Processing, SPIC, IET IP, TVC, Computers & Graphics, Journal of Electronic Imaging, Frontiers in Computer Science</strong>"
-- normal:
-    content:  "<strong>2020:</strong> <strong>Special Prize for Scientific and Technological Progress of Shanghai Municipality</strong>, <i>11/18</i>"
-- normal:
-    content:  "<strong>2020:</strong> <strong>One of the Top 10 Scientific Advances in the Shanghai Jiao Tong University</strong>, <i>8/9</i>"
-- normal:
-    content:  "<strong>2019:</strong> <strong>Super AI Leader (SAIL) TOP 30 project at World Artificial Intelligence Conference</strong>, <i>6/13</i>"
-- normal:
-    content:  "<strong>2016-2019:</strong> <strong>KoGuan Endeavor Scholarship, Suzhou Yucai Scholarship</strong>"    
-- normal:
-    content:  "<strong>2015:</strong> <strong>Outstanding Graduate of the Northwestern Polytechnical University</strong>"
-- normal:
-    content:  "<strong>2012-2015:</strong> <strong>Outstanding Student of the Northwestern Polytechnical University</strong>"    
-- normal:
-    content:  "<strong>2012-2015:</strong> <strong>National Endeavor Scholarship, Samsung China Scholarship, Wu Yajun Scholarship</strong>"
+    content:  "<strong>Journal Reviewer:</strong> <strong>IEEE TPAMI, IJCV, IEEE TIP, IEEE TAFFC, IEEE TMM, Signal Processing, SPIC, IET IP, TVC, Computers & Graphics, IEEE Sensors, Journal of Electronic Imaging, Frontiers in Computer Science</strong>"
