--- a/_data/services.yml
+++ b/_data/services.yml
@@ -3,8 +3,8 @@
 - normal:
     content:  "<strong>Member in China Society of Image and Graphics (CSIG):</strong> <strong>Professional Committee of Machine Vision, Professional Committee of Animation and Digital Entertainment</strong>"
 - normal:
-    content:  "<strong>Session Chair:</strong> <strong>Computer Graphics International (CGI) 2022, Shanghai Cross-Media Intelligence and Computer Vision Forum 2019</strong>, <i>11/18</i>"
+    content:  "<strong>Session Chair:</strong> <strong>Computer Graphics International (CGI) 2022, Shanghai Cross-Media Intelligence and Computer Vision Forum 2019</strong>"
 - normal:
-    content:  "<strong>Program Committee Member/Conference Reviewer:</strong> <strong>CVPR, ACM MM, IJCAI, AAAI, CGI, ICONIP, ICIG, NCIIP</strong>"
+    content:  "<strong>Program Committee Member/Conference Reviewer:</strong> <strong>CVPR, IJCAI, AAAI, ACM MM, CGI, ICONIP, ICIG, NCIIP</strong>"
 - normal:
     content:  "<strong>Journal Reviewer:</strong> <strong>IEEE TPAMI, IJCV, IEEE TIP, IEEE TAFFC, IEEE TMM, Signal Processing, SPIC, IET IP, TVC, Computers & Graphics, IEEE Sensors, Journal of Electronic Imaging, Frontiers in Computer Science</strong>"
