--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,7 +1,7 @@
 - normal:
     content:  "<strong>2022:</strong> <strong>Participation in Computer Graphics International (CGI) 2022 Supported by K.C.Wong Education Foundation</strong>, <i>Principal Investigator</i>"
 - normal:
-    content:  "<strong>2022:</strong> <strong>Patent License for Method and Device of Facial Action Unit Recognition Based on Joint Learning and Optical Flow Estimation</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2022:</strong> <strong>Patent License Project for Method and Device of Facial Action Unit Recognition Based on Joint Learning and Optical Flow Estimation</strong>, <i>Principal Investigator</i>"
 - normal:
     content:  "<strong>2022:</strong> <strong>Talent Program for Deputy General Manager of Science and Technology of Jiangsu Province</strong>, <i>Principal Investigator</i>"
 - normal:
