--- a/_data/teachings.yml
+++ b/_data/teachings.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>2022:</strong> <strong>Image Processing and Computer Vision</strong>, <i>Lecturer</i>"
+    content:  "<strong>2022:</strong> <strong>Image Processing and Computer Vision</strong>, <i>Lecturer (Principal of Course)</i>"
 - normal:
     content:  "<strong>2022:</strong> <strong>Practice for Python Programming</strong>, <i>Lecturer</i>"
 - normal:
