--- a/_data/patents.yml
+++ b/_data/patents.yml
@@ -3,4 +3,4 @@
 - normal:
     content:  "<strong>2021:</strong> <strong>A Method and Device of Facial Action Unit Recognition Based on Joint Learning and Optical Flow Estimation</strong>, <i>The First Inventor</i>, ZL202110360938.4"
 - normal:
-    content:  "<strong>2018:</strong> <strong>Identity Verification System V1.0 Based on Face Recognition</strong>, <i>Software Copyrights</i>, <i>The Second Inventor</i>, 2018SR160441"
+    content:  "<strong>2018:</strong> <strong>Identity Verification System V1.0 Based on Face Recognition</strong>, <i>Software Copyright</i>, <i>The Second Inventor</i>, 2018SR160441"
