--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,9 +1,11 @@
 - normal:
+    content:  "<strong>Publication Chair:</strong> <strong>Computer Graphics International (CGI) 2023
+- normal:
+    content:  "<strong>Session Chair:</strong> <strong>Computer Graphics International (CGI) 2022, Shanghai Cross-Media Intelligence and Computer Vision Forum 2019</strong>"
+- normal:
     content:  "<strong>Member in Chinese Association for Artificial Intelligence (CAAI):</strong> <strong>Professional Committee of Pattern Recognition, Professional Committee of Knowledge Engineering and Distributed Intelligence, Professional Committee of Machine Learning</strong>"
 - normal:
     content:  "<strong>Member in China Society of Image and Graphics (CSIG):</strong> <strong>Professional Committee of Machine Vision, Professional Committee of Animation and Digital Entertainment</strong>"
-- normal:
-    content:  "<strong>Session Chair:</strong> <strong>Computer Graphics International (CGI) 2022, Shanghai Cross-Media Intelligence and Computer Vision Forum 2019</strong>"
 - normal:
     content:  "<strong>Program Committee Member/Conference Reviewer:</strong> <strong>CVPR, IJCAI, AAAI, ACM MM, CGI, ICONIP, ICIG, NCIIP</strong>"
 - normal:
