--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>Publication Chair:</strong> <strong>Computer Graphics International (CGI) 2023
+    content:  "<strong>Publication Chair:</strong> <strong>Computer Graphics International (CGI) 2023</strong>"
 - normal:
     content:  "<strong>Session Chair:</strong> <strong>Computer Graphics International (CGI) 2022, Shanghai Cross-Media Intelligence and Computer Vision Forum 2019</strong>"
 - normal:
