--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -29,7 +29,7 @@
   desc:  "Face Analysis, Deep Learning"
   host:  false
   brief: true
-- date:  "Sept. 2011 - Jul. 2015"
+- date:  "Sept. 2011 - July 2015"
   title: "Undergraduate student @ NPU"
   desc:  "B.Eng. in Computer Science and Technology"
   host:
