--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,15 +3,15 @@
 - normal:
     content:  "<strong>Dec. 2022:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> becomes an ESI highly cited paper."
 - normal:
-    content:  "<strong>Jul. 2022:</strong> I am the recipient of <strong>Talent Program for Deputy General Manager of Science and Technology of Jiangsu Province</strong>."
+    content:  "<strong>July 2022:</strong> I am the recipient of <strong>Talent Program for Deputy General Manager of Science and Technology of Jiangsu Province</strong>."
 - normal:
-    content:  "<strong>Jun. 2022:</strong> Our paper <strong>TextDCT: Arbitrary-Shaped Text Detection via Discrete Cosine Transform Mask</strong> is accepted by <i>IEEE TMM</i>."
+    content:  "<strong>June 2022:</strong> Our paper <strong>TextDCT: Arbitrary-Shaped Text Detection via Discrete Cosine Transform Mask</strong> is accepted by <i>IEEE TMM</i>."
 - normal:
     content:  "<strong>Aug. 2021:</strong> I am the recipient of <strong>Young Scientists Fund of the National Natural Science Foundation of China</strong>."
 - normal:
-    content:  "<strong>Jul. 2021:</strong> I am the recipient of <strong>High-Level Talent Program for Innovation and Entrepreneurship (ShuangChuang Doctor) of Jiangsu Province</strong>."
+    content:  "<strong>July 2021:</strong> I am the recipient of <strong>High-Level Talent Program for Innovation and Entrepreneurship (ShuangChuang Doctor) of Jiangsu Province</strong>."
 - normal:
-    content:  "<strong>Jun. 2021:</strong> Our paper <strong>Unconstrained Facial Action Unit Detection via Latent Feature Domain</strong> is accepted by <i>IEEE TAFFC</i>."
+    content:  "<strong>June 2021:</strong> Our paper <strong>Unconstrained Facial Action Unit Detection via Latent Feature Domain</strong> is accepted by <i>IEEE TAFFC</i>."
 - normal:
     content:  "<strong>Apr. 2021:</strong> Our paper <strong>Explicit Facial Expression Transfer via Fine-Grained Representations</strong> is accepted by <i>IEEE TIP</i>."
 - normal:
@@ -21,6 +21,6 @@
 - normal:
     content:  "<strong>Oct. 2019:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> is accepted by <i>IEEE TAFFC</i>."
 - normal:
-    content:  "<strong>Jul. 2018:</strong> Our paper <strong>Deep Adaptive Attention for Joint Facial Action Unit Detection and Face Alignment</strong> is accepted by <i>ECCV 2018</i>."
+    content:  "<strong>July 2018:</strong> Our paper <strong>Deep Adaptive Attention for Joint Facial Action Unit Detection and Face Alignment</strong> is accepted by <i>ECCV 2018</i>."
 - normal:
     content:  "<strong>Nov. 2017:</strong> I am now studying at Multimedia and Interactive Computing Lab of <strong>Nanyang Technological University (NTU)</strong>, Singapore as a Research Assistant, advised by <a href='https://research.monash.edu/en/persons/jianfei-cai/'>Prof. Jianfei Cai</a>."
