--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,15 +1,17 @@
 - normal:
-    content:  "<strong>Jan. 2023:</strong> I am the recipient of <strong>Outstanding Young Teacher Program of China University of Mining and Technology</strong>."
+    content:  "<strong>Jan. 2023:</strong> I am a recipient of <strong>Outstanding Young Teacher Program of China University of Mining and Technology</strong>."    
+- normal:
+    content:  "<strong>Jan. 2023:</strong> I serve as a Publication Chair in Computer Graphics International (CGI) 2023</strong>."
 - normal:
     content:  "<strong>Dec. 2022:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> becomes an ESI highly cited paper."
 - normal:
-    content:  "<strong>July 2022:</strong> I am the recipient of <strong>Talent Program for Deputy General Manager of Science and Technology of Jiangsu Province</strong>."
+    content:  "<strong>July 2022:</strong> I am a recipient of <strong>Talent Program for Deputy General Manager of Science and Technology of Jiangsu Province</strong>."
 - normal:
     content:  "<strong>June 2022:</strong> Our paper <strong>TextDCT: Arbitrary-Shaped Text Detection via Discrete Cosine Transform Mask</strong> is accepted by <i>IEEE TMM</i>."
 - normal:
-    content:  "<strong>Aug. 2021:</strong> I am the recipient of <strong>Young Scientists Fund of the National Natural Science Foundation of China</strong>."
+    content:  "<strong>Aug. 2021:</strong> I am a recipient of <strong>Young Scientists Fund of the National Natural Science Foundation of China</strong>."
 - normal:
-    content:  "<strong>July 2021:</strong> I am the recipient of <strong>High-Level Talent Program for Innovation and Entrepreneurship (ShuangChuang Doctor) of Jiangsu Province</strong>."
+    content:  "<strong>July 2021:</strong> I am a recipient of <strong>High-Level Talent Program for Innovation and Entrepreneurship (ShuangChuang Doctor) of Jiangsu Province</strong>."
 - normal:
     content:  "<strong>June 2021:</strong> Our paper <strong>Unconstrained Facial Action Unit Detection via Latent Feature Domain</strong> is accepted by <i>IEEE TAFFC</i>."
 - normal:
