--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,7 +1,7 @@
 - normal:
     content:  "<strong>Jan. 2023:</strong> I am a recipient of <strong>Outstanding Young Teacher Program of China University of Mining and Technology</strong>."    
 - normal:
-    content:  "<strong>Jan. 2023:</strong> I serve as a Publication Chair in Computer Graphics International (CGI) 2023</strong>."
+    content:  "<strong>Jan. 2023:</strong> I serve as a Publication Chair in <i>Computer Graphics International (CGI) 2023</i>."
 - normal:
     content:  "<strong>Dec. 2022:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> becomes an ESI highly cited paper."
 - normal:
